Updated ,added goal ,strategy managment

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SGSN
+application.vendor=Mou nir
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,14 +29,21 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/GSNConstruct.jar
+dist.jar=${dist.dir}/SGSN.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/GSNConstruct
+dist.jlink.output=${dist.jlink.dir}/SGSN
+endorsed.classpath=
 excludes=
+file.reference.jar_files__1_.zip=C:\\Users\\Mou nir\\Downloads\\jar_files (1).zip
+file.reference.jar_files__2_.zip=C:\\Users\\Mou nir\\Downloads\\jar_files (2).zip
+file.reference.jaxb-api-2.3.0.jar=C:\\Program Files\\JAR\\jaxb-api-2.3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jaxb-api-2.3.0.jar}:\
+    ${file.reference.jar_files__1_.zip}:\
+    ${file.reference.jar_files__2_.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,8 +52,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,8 +78,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=GSNConstruct
-main.class=gsnconstruct.GSNConstruct
+jlink.launcher.name=SGSN
+main.class=GSN_construct
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
